# CocktailChat

./: .env.sample  Makefile  README.md  index.html  main.py  pyproject.toml
schemas/: schemas.py
